adding the size of the pic

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1>hello world!</h1>
-<img src="/src/IMG_7846.jpeg" alt="A walkn in the woods"></img>
+<img src="/src/IMG_7846.jpeg" alt="A walkn in the woods" width="500" height="400"></img>
